Add discover tools for other strimzi resources
Signed-off-by: David Kornel <kornys@outlook.com>